--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@vercel/kv": "^2.0.0",
+    "@upstash/redis": "^1.34.3",
     "twilio": "^5.3.5",
     "@anthropic-ai/sdk": "^0.32.1",
     "@google/generative-ai": "^0.21.0",
