Update .env.example with Upstash variables

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ GEMINI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 CLOUDFLARE_ACCOUNT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 CLOUDFLARE_GATEWAY_ID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# Vercel KV Storage
-# Estas se crean automáticamente cuando configuras Vercel KV
-# KV_REST_API_URL=
-# KV_REST_API_TOKEN=
+# Upstash Redis
+# Estas se crean automáticamente cuando conectas Upstash en Vercel
+UPSTASH_REDIS_REST_URL=https://xxxxx.upstash.io
+UPSTASH_REDIS_REST_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
