Add API base URL to env example

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,24 @@
-# Twilio Configuration
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
+# API Configuration
+NEXT_PUBLIC_API_BASE_URL=https://pixan-wa-zc6l.vercel.app/WA
 
-# Anthropic API
-ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Twilio
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_WHATSAPP_NUMBER=
 
-# Google AI (Gemini)
-GEMINI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Anthropic
+ANTHROPIC_API_KEY=
 
-# Cloudflare AI Gateway (opcional - para otros modelos)
-CLOUDFLARE_ACCOUNT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-CLOUDFLARE_GATEWAY_ID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Google AI
+GEMINI_API_KEY=
+
+# AI Gateway
+AI_GATEWAY_API_KEY=
+
+# Cloudflare (opcional)
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_GATEWAY_ID=
 
 # Upstash Redis
-# Estas se crean automáticamente cuando conectas Upstash en Vercel
-UPSTASH_REDIS_REST_URL=https://xxxxx.upstash.io
-UPSTASH_REDIS_REST_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
